# knowledge-agent-example

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: demo.py
src/knowledge_agent/: __init__.py  chat.py  cli.py  config.py  demo.py  facade.py  identifiers.py  llm.py  pipeline.py  prov.py  qa.py  skills.py
src/knowledge_agent/repositories/: __init__.py  prov_repo.py  query_repo.py  schema_repo.py  session.py
tests/: test_make_content_id.py  test_safe_identifiers.py
